# leetcode-in-python

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
leetcode/: build_array_from_permutation.py  concatenation_of_array.py  convert_the_temperature.py  defanging_an_ip_address.py  final_value_of_variable_after_performing_operations.py  find_words_containing_character.py  number_of_good_pairs.py  problem0001.py  problem0009.py  problem3512.py  problem3898.py  problem3925.py  shuffle_the_array.py
leetcode/problem3712/: solution.py
tests/: test_build_array_from_permutation.py  test_concatenation_of_array.py  test_convert_the_temperature.py  test_defanging_an_ip_address.py  test_final_value_of_variable_after_performing_operations.py  test_find_words_containing_character.py  test_number_of_good_pairs.py  test_problem0001.py  test_problem0009.py  test_problem3512.py  test_problem3898.py  test_problem3925.py  test_shuffle_the_array.py
tests/test_problem3712/: test_solution.py
