[project]
name = "leetcode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.0"
dependencies = [
    "ipython>=9.6.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.15",
    "ty>=0.0.42",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["leetcode"]

[tool.ruff]
extend-exclude = ["leetcode/problem0001.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "S"]
ignore = ["E265", "E501", "E741"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.ty.src]
exclude = ["leetcode/problem0001.py"]

[tool.pytest.ini_options]
addopts = "--ignore=tests/test_problem0001.py"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
]
